# SecuGen-fingerprint-wrapper

./: CMakeLists.txt  README.md
src/: SecuGenWrapper.cpp  SecuGenWrapper.h
